Added some tournament end points